@@ -22,11 +22,11 @@ EXTRA_DIST = \
 	
 ## @end 1
 AUTOMAKE_OPTIONS = gnu
+if USE_PLUGIN
+PLUGIN_DIR = plugin
+endif
 SUBDIRS = src po data $(PLUGIN_DIR)
 
-if USE_PLUGIN
-PLUGIN_DIR=plugin
-endif
 ## @start 1
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure config.h.in $(AUX_DIST)
 
